test/errors/parameterized_types_error/zs/no_parameters_error.zs
package no_parameters_error;

struct NoParameters()
{
    int32 value;
};
